--- a/SISS/Views/Officer/AddOfficer.cshtml
+++ b/SISS/Views/Officer/AddOfficer.cshtml
@@ -27,9 +27,9 @@
             <div class="row">
                 <div class="col-lg-10">
                     <label for="formGroupExampleInput"><strong>Officer Name</strong></label>
-                    @Html.TextBoxFor(model => model.officerName, new { @class = "form-control", @placeholder = "Name" })
+                    @Html.TextBoxFor(model => model.officerName, new { @class = "form-control", @required = "required", @placeholder = "Name" })
 
-                    @Html.ValidationMessageFor(model => model.officerName, "", new { @class = "text-danger" })
+                
                 </div>
             </div>
         </div>
